m2isar/frontends/my/parser_gen/CoreDSL2Parser.py
# Generated from CoreDSL2.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CoreDSL2Parser ( Parser ):

    grammarFileName = "CoreDSL2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'extern'", "'('", "')'", "';'", "','", 
                     "'if'", "'else'", "'for'", "'while'", "'do'", "'switch'", 
                     "'{'", "'}'", "'return'", "'break'", "'continue'", 
                     "'spawn'", "'case'", "':'", "'default'", "'*'", "'&'", 
                     "'<'", "'>'", "'bool'", "'void'", "'enum'", "'unsigned'", 
                     "'signed'", "'char'", "'short'", "'int'", "'long'", 
                     "'float'", "'double'", "'[['", "'='", "']]'", "'.'", 
                     "'->'", "'++'", "'--'", "'+'", "'-'", "'~'", "'!'", 
                     "'/'", "'%'", "'s*'", "'u*'", "'su**'", "'<<'", "'>>'", 
                     "'s<<'", "'u<<'", "'u>>'", "'<='", "'>='", "'u<'", 
                     "'u>'", "'s<'", "'s>'", "'=='", "'!='", "'^'", "'|'", 
                     "'&&'", "'||'", "'::'", "'?'", "'+='", "'-='", "'*='", 
                     "'/='", "'&='", "'|='", "'^='", "'>>='", "'>>>='", 
                     "'<<='", "'%='", "'alias'", "'const'", "'volatile'", 
                     "'static'", "'register'", "'struct'", "'union'", "'['", 
                     "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "LEFT_BR", "RIGHT_BR", "BOOLEAN", "FLOAT", 
                      "INTEGER", "IDENTIFIER", "CHARCONST", "ENCSTRINGCONST", 
                      "STRING", "ML_COMMENT", "SL_COMMENT", "WS" ]

    RULE_function_definition = 0
    RULE_parameter_list = 1
    RULE_parameter_declaration = 2
    RULE_statement = 3
    RULE_switch_block_statement_group = 4
    RULE_switch_label = 5
    RULE_block = 6
    RULE_block_item = 7
    RULE_for_condition = 8
    RULE_declaration = 9
    RULE_type_specifier = 10
    RULE_value_type_specifier = 11
    RULE_integer_signedness = 12
    RULE_integer_shorthand = 13
    RULE_float_shorthand = 14
    RULE_attribute = 15
    RULE_bit_size_specifier = 16
    RULE_enumerator_list = 17
    RULE_enumerator = 18
    RULE_struct_declaration = 19
    RULE_struct_declaration_specifier = 20
    RULE_declarator = 21
    RULE_initializer = 22
    RULE_initializerList = 23
    RULE_designated_initializer = 24
    RULE_designator = 25
    RULE_expression = 26
    RULE_primary = 27
    RULE_string_literal = 28
    RULE_constant = 29
    RULE_integer_constant = 30
    RULE_floating_constant = 31
    RULE_bool_constant = 32
    RULE_character_constant = 33
    RULE_double_left_bracket = 34
    RULE_double_right_bracket = 35
    RULE_data_types = 36
    RULE_type_qualifier = 37
    RULE_storage_class_specifier = 38
    RULE_struct_or_union = 39

    ruleNames =  [ "function_definition", "parameter_list", "parameter_declaration", 
                   "statement", "switch_block_statement_group", "switch_label", 
                   "block", "block_item", "for_condition", "declaration", 
                   "type_specifier", "value_type_specifier", "integer_signedness", 
                   "integer_shorthand", "float_shorthand", "attribute", 
                   "bit_size_specifier", "enumerator_list", "enumerator", 
                   "struct_declaration", "struct_declaration_specifier", 
                   "declarator", "initializer", "initializerList", "designated_initializer", 
                   "designator", "expression", "primary", "string_literal", 
                   "constant", "integer_constant", "floating_constant", 
                   "bool_constant", "character_constant", "double_left_bracket", 
                   "double_right_bracket", "data_types", "type_qualifier", 
                   "storage_class_specifier", "struct_or_union" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    LEFT_BR=89
    RIGHT_BR=90
    BOOLEAN=91
    FLOAT=92
    INTEGER=93
    IDENTIFIER=94
    CHARCONST=95
    ENCSTRINGCONST=96
    STRING=97
    ML_COMMENT=98
    SL_COMMENT=99
    WS=100

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Function_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.extern = None # Token
            self.type_ = None # Type_specifierContext
            self.name = None # Token
            self.params = None # Parameter_listContext
            self._attribute = None # AttributeContext
            self.attributes = list() # of AttributeContexts
            self.behavior = None # BlockContext

        def type_specifier(self):
            return self.getTypedRuleContext(CoreDSL2Parser.Type_specifierContext,0)


        def IDENTIFIER(self):
            return self.getToken(CoreDSL2Parser.IDENTIFIER, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(CoreDSL2Parser.Parameter_listContext,0)


        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoreDSL2Parser.AttributeContext)
            else:
                return self.getTypedRuleContext(CoreDSL2Parser.AttributeContext,i)


        def block(self):
            return self.getTypedRuleContext(CoreDSL2Parser.BlockContext,0)


        def getRuleIndex(self):
            return CoreDSL2Parser.RULE_function_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_definition" ):
                listener.enterFunction_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_definition" ):
                listener.exitFunction_definition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_definition" ):
                return visitor.visitFunction_definition(self)
            else:
                return visitor.visitChildren(self)




    def function_definition(self):

        localctx = CoreDSL2Parser.Function_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_function_definition)
        self._la = 0 # Token type
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                localctx.extern = self.match(CoreDSL2Parser.T__0)
                self.state = 81
                localctx.type_ = self.type_specifier()
                self.state = 82
                localctx.name = self.match(CoreDSL2Parser.IDENTIFIER)
                self.state = 83
                self.match(CoreDSL2Parser.T__1)
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la - 25)) & ~0x3f) == 0 and ((1 << (_la - 25)) & -4611686018427385857) != 0:
                    self.state = 84
                    localctx.params = self.parameter_list()


                self.state = 87
                self.match(CoreDSL2Parser.T__2)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==36:
                    self.state = 88
                    localctx._attribute = self.attribute()
                    localctx.attributes.append(localctx._attribute)
                    self.state = 93
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 94
                self.match(CoreDSL2Parser.T__3)
                pass
            elif token in [25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 87, 88]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                localctx.type_ = self.type_specifier()
                self.state = 97
                localctx.name = self.match(CoreDSL2Parser.IDENTIFIER)
                self.state = 98
                self.match(CoreDSL2Parser.T__1)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la - 25)) & ~0x3f) == 0 and ((1 << (_la - 25)) & -4611686018427385857) != 0:
                    self.state = 99
                    localctx.params = self.parameter_list()


                self.state = 102
                self.match(CoreDSL2Parser.T__2)
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==36:
                    self.state = 103
                    localctx._attribute = self.attribute()
                    localctx.attributes.append(localctx._attribute)
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 111
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [12]:
                    self.state = 109
                    localctx.behavior = self.block()
                    pass
                elif token in [4]:
                    self.state = 110
                    self.match(CoreDSL2Parser.T__3)
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._parameter_declaration = None # Parameter_declarationContext
            self.params = list() # of Parameter_declarationContexts

        def parameter_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoreDSL2Parser.Parameter_declarationContext)
            else:
                return self.getTypedRuleContext(CoreDSL2Parser.Parameter_declarationContext,i)


        def getRuleIndex(self):
            return CoreDSL2Parser.RULE_parameter_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter_list" ):
                listener.enterParameter_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter_list" ):
                listener.exitParameter_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list" ):
                return visitor.visitParameter_list(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list(self):

        localctx = CoreDSL2Parser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            localctx._parameter_declaration = self.parameter_declaration()
            localctx.params.append(localctx._parameter_declaration)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 116
                self.match(CoreDSL2Parser.T__4)
                self.state = 117
                localctx._parameter_declaration = self.parameter_declaration()
                localctx.params.append(localctx._parameter_declaration)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type_ = None # Type_specifierContext
            self.decl = None # DeclaratorContext

        def type_specifier(self):
            return self.getTypedRuleContext(CoreDSL2Parser.Type_specifierContext,0)


        def declarator(self):
            return self.getTypedRuleContext(CoreDSL2Parser.DeclaratorContext,0)


        def getRuleIndex(self):
            return CoreDSL2Parser.RULE_parameter_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter_declaration" ):
                listener.enterParameter_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter_declaration" ):
                listener.exitParameter_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_declaration" ):
                return visitor.visitParameter_declaration(self)
            else:
                return visitor.visitChildren(self)




    def parameter_declaration(self):

        localctx = CoreDSL2Parser.Parameter_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parameter_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            localctx.type_ = self.type_specifier()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==94:
                self.state = 124
                localctx.decl = self.declarator()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CoreDSL2Parser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class For_statementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoreDSL2Parser.StatementContext
            super().__init__(parser)
            self.type_ = None # Token
            self.cond = None # For_conditionContext
            self.stmt = None # StatementContext
            self.copyFrom(ctx)

        def for_condition(self):
            return self.getTypedRuleContext(CoreDSL2Parser.For_conditionContext,0)

        def statement(self):
            return self.getTypedRuleContext(CoreDSL2Parser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_statement" ):
                listener.enterFor_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_statement" ):
                listener.exitFor_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_statement" ):
                return visitor.visitFor_statement(self)
            else:
                return visitor.visitChildren(self)


    class Spawn_statementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoreDSL2Parser.StatementContext
            super().__init__(parser)
            self.type_ = None # Token
            self.stmt = None # StatementContext
            self.copyFrom(ctx)

        def statement(self):
            return self.getTypedRuleContext(CoreDSL2Parser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpawn_statement" ):
                listener.enterSpawn_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpawn_statement" ):
                listener.exitSpawn_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpawn_statement" ):
                return visitor.visitSpawn_statement(self)
            else:
                return visitor.visitChildren(self)


    class Continue_statementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoreDSL2Parser.StatementContext
            super().__init__(parser)
            self.type_ = None # Token
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinue_statement" ):
                listener.enterContinue_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinue_statement" ):
                listener.exitContinue_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinue_statement" ):
                return visitor.visitContinue_statement(self)
            else:
                return visitor.visitChildren(self)


    class Expression_statementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoreDSL2Parser.StatementContext
            super().__init__(parser)
            self.expr = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(CoreDSL2Parser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_statement" ):
                listener.enterExpression_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_statement" ):
                listener.exitExpression_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_statement" ):
                return visitor.visitExpression_statement(self)
            else:
                return visitor.visitChildren(self)


    class If_statementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoreDSL2Parser.StatementContext
            super().__init__(parser)
            self.type_ = None # Token
            self._expression = None # ExpressionContext
            self.cond = list() # of ExpressionContexts
            self._statement = None # StatementContext
            self.stmt = list() # of StatementContexts
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoreDSL2Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CoreDSL2Parser.ExpressionContext,i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoreDSL2Parser.StatementContext)
            else:
                return self.getTypedRuleContext(CoreDSL2Parser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_statement" ):
                listener.enterIf_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_statement" ):
                listener.exitIf_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_statement" ):
                return visitor.visitIf_statement(self)
            else:
                return visitor.visitChildren(self)


    class Procedure_callContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoreDSL2Parser.StatementContext
            super().__init__(parser)
            self.ref = None # Token
            self._expression = None # ExpressionContext
            self.args = list() # of ExpressionContexts
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(CoreDSL2Parser.IDENTIFIER, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoreDSL2Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CoreDSL2Parser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedure_call" ):
                listener.enterProcedure_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedure_call" ):
                listener.exitProcedure_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedure_call" ):
                return visitor.visitProcedure_call(self)
            else:
                return visitor.visitChildren(self)


    class While_statementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoreDSL2Parser.StatementContext
            super().__init__(parser)
            self.type_ = None # Token
            self.cond = None # ExpressionContext
            self.stmt = None # StatementContext
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(CoreDSL2Parser.ExpressionContext,0)

        def statement(self):
            return self.getTypedRuleContext(CoreDSL2Parser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_statement" ):
                listener.enterWhile_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_statement" ):
                listener.exitWhile_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_statement" ):
                return visitor.visitWhile_statement(self)
            else:
                return visitor.visitChildren(self)


    class Switch_statementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoreDSL2Parser.StatementContext
            super().__init__(parser)
            self.type_ = None # Token
            self.cond = None # ExpressionContext
            self._switch_block_statement_group = None # Switch_block_statement_groupContext
            self.items = list() # of Switch_block_statement_groupContexts
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(CoreDSL2Parser.ExpressionContext,0)

        def switch_label(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoreDSL2Parser.Switch_labelContext)
            else:
                return self.getTypedRuleContext(CoreDSL2Parser.Switch_labelContext,i)

        def switch_block_statement_group(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoreDSL2Parser.Switch_block_statement_groupContext)
            else:
                return self.getTypedRuleContext(CoreDSL2Parser.Switch_block_statement_groupContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitch_statement" ):
                listener.enterSwitch_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitch_statement" ):
                listener.exitSwitch_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSwitch_statement" ):
                return visitor.visitSwitch_statement(self)
            else:
                return visitor.visitChildren(self)


    class Block_statementContext(StatementContext):
